[gd_scene load_steps=2 format=2]

[ext_resource path="res://gd_scripts/Server.gd" type="Script" id=1]

[node name="Server" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HostButton" type="Button" parent="."]
margin_left = 446.0
margin_top = 254.0
margin_right = 620.0
margin_bottom = 319.0
text = "Host Game"

[node name="JoinButton" type="Button" parent="."]
margin_left = 443.0
margin_top = 349.0
margin_right = 622.0
margin_bottom = 409.0
text = "Join Game"
[connection signal="pressed" from="HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_JoinButton_pressed"]
